Move to Java 21. Update JUnit to fix a vulnerability. Make several variables final.